# dune-grid

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  dune-grid.pc.in  dune.module  periodic.2d  periodic.msh  playground.2d  playground.msh  requirements.txt
cmake/modules/: AddALUGridFlags.cmake  AddAlbertaFlags.cmake  AddAmiraMeshFlags.cmake  AddPsurfaceFlags.cmake  AddUGFlags.cmake  CMakeLists.txt  DuneGridMacros.cmake  FindAlberta.cmake  FindAmiraMesh.cmake  FindPsurface.cmake  UseUG.cmake
cmake/pkg/: dune-grid-config.cmake.in
doc/: CMakeLists.txt  viewThreadSafe.org
doc/sphinx/: common.rst  conf.py  geometry.rst  grid.rst  index.rst
dune/grid/: CMakeLists.txt  concepts.hh  identitygrid.hh  onedgrid.hh  uggrid.hh  virtualizedgrid.hh  yaspgrid.hh
dune/grid/albertagrid/: CMakeLists.txt  agrid.hh  entity.hh  geometry.hh  geometryreference.hh
dune/grid/albertagrid/test/: CMakeLists.txt
dune/grid/alugrid/2d/: CMakeLists.txt  alugrid.hh  grid.hh
dune/grid/alugrid/3d/: CMakeLists.txt  alugrid.hh  grid.hh
dune/grid/alugrid/common/: capabilities.hh
dune/grid/common/: capabilities.hh  entity.hh  entityiterator.hh  entitypointer.hh  grid.hh  gridview.hh  indexidset.hh  sizecache.hh
dune/grid/common/test/: CMakeLists.txt
dune/grid/concepts/: CMakeLists.txt  common.hh  datahandle.hh  entity.hh  entityiterator.hh  entityset.hh  geometry.hh  grid.hh  gridview.hh  indexidset.hh  indexset.hh  intersection.hh  intersectioniterator.hh
dune/grid/concepts/archetypes/: CMakeLists.txt  datahandle.hh  entity.hh  geometry.hh
dune/grid/geometrygrid/: capabilities.hh  entity.hh  grid.hh  gridview.hh
dune/grid/identitygrid/: identitygridentity.hh
dune/grid/io/file/: gmshreader.hh
dune/grid/io/file/dgfparser/: CMakeLists.txt  dgfgridfactory.hh  dgfvirtualized.hh
dune/grid/io/file/dgfparser/blocks/: CMakeLists.txt
dune/grid/io/file/dgfparser/test/: CMakeLists.txt
dune/grid/io/file/dgfparser/utils/: CMakeLists.txt
dune/grid/io/file/test/: CMakeLists.txt
dune/grid/io/file/vtk/: vtksequencewriter.hh
dune/grid/onedgrid/: CMakeLists.txt  onedgridentity.hh
dune/grid/test/: CMakeLists.txt  Makefile.am  checkentitylifetime.hh  checkintersectionlifetime.hh  checkiterators.cc  checkrandomaccessiterators.hh  gridcheck.hh  test-concepts.cc  test-virtualizedgrid.cc  test-yaspgrid.cc
dune/grid/uggrid/: CMakeLists.txt
dune/grid/utility/: CMakeLists.txt  entityowner.hh  entityownertype.hh  globalindexset.hh  ownertype.hh
dune/grid/utility/test/: CMakeLists.txt  entityownertest.cc
dune/grid/virtualizedgrid/: CMakeLists.txt  cast.hh  datahandle.hh  entity.hh  entityseed.hh  geometry.def.hh  geometry.hh  grid.hh  gridview.hh  hierarchiciterator.hh  idtype.def.hh  idtype.hh  indexsets.def.hh  indexsets.hh  intersectioniterator.hh  intersections.hh  leafiterator.hh  leveliterator.hh
dune/grid/virtualizedgrid/typeerasure/: interfaces.hh  polymorphicsmallobject.hh  typeerasure.hh
dune/grid/yaspgrid/: CMakeLists.txt  backuprestore.cc  backuprestore.hh  backuprestore.impl.hh  coordinates.hh  yaspgrid.cc  yaspgrid.impl.hh  yaspgridleveliterator.hh  ygrid.hh
dune/python/: docstrings.hh
dune/python/grid/: enums.hh  hierarchical.hh  simplegridfunction.hh
dune/python/test/: interpolate.py
lib/: CMakeLists.txt
python/dune/grid/: CMakeLists.txt  __init__.py  _grid.cc  _grids.py  core.py  domain.py  grid_generator.py  plotting.py
python/dune/grid/tutorial/: CMakeLists.txt  example.py
src/: CMakeLists.txt  periodic-grid.cc
src/gridinfo-gmsh/: CMakeLists.txt
